# SubstrateDevelopment

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  a  a.out  main  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
SkidDetection/: SkidDetection.cc  SkidDetection.h
carto/: CMakeLists.txt  glog_test.cpp  memcpy.cpp
cat/: CMakeLists.txt  cat.cpp  cat.h
cmake_modules/: FindPOSE.cmake  说明.md
config/: location.txt  output.txt  toflocation.yaml
coredump/: core.cpp  coredump.md
data/: pointcloud.pcd
data/log/: glider_log_20220706-184637.3204  glider_log_20220706-184701.3392  glider_log_20220721-101416.24102  glider_log_20220723-145639.11449  glider_log_20220723-145730.12019  glider_log_20220723-145906.12763  glider_log_20220723-150206.14088  glider_log_20220723-150552.15023  glider_log_20220723-151253.16926  glider_log_20220723-151442.17627  glider_log_20220723-151742.18609  glider_log_20220723-152435.19694  glider_log_20220723-152626.20499  glider_log_20220723-152754.21285  glider_log_20220723-153044.22006  glider_log_20220723-153702.24395  glider_log_20220723-155102.31836  glider_log_20230626-180838.28361  glider_log_20230626-180932.28727  glog_test.INFO
data/pcl/: UV.ply
data/point/: tmp_tof_data_wire3567487.ply  tmp_tof_data_wire3571643.ply
design_patterns/: OpticalSlipDetector.cpp  OpticalSlipDetector.h  Singleton.h  Singleton_qiu.h  explain.txt  main_designPatterns.cpp
doc/: C++interview.md  StructuredLight.md  Vslam.md  autoTool.md  c++.md  cherno.md  cmake.md  code_block.md  development_record.md  docker.md  gitbook.md  linux.md  markdown.md  myblog.md  optimization_learn.md  pcl.md  pcl_learn.md  resourcelibrary.md  ros.md  todo.md  开发总结.md
example/: CMakeLists.txt  assignments_chapter1.cpp  assignments_chapter2.cpp  carto_test.cpp  cherno.cpp  cherno_main.cpp  demo_data structure.cpp  demo_data_structure.cpp  demo_eigen.cpp  demo_functor.cpp  demo_opticlflow.cpp  demo_programmingtips.cpp  demo_registration.cpp  demo_thread.cpp  eigen_test.cpp  lider_trans.cpp  map.cpp  test_main.cpp  tof_location.cpp
gtest/: fixed_ratio_sampler.h  fixed_ratio_sampler_test.cc
icp/: CMakeLists.txt
icp/test/: CMakeLists.txt  icp.cpp  icp.h  main.cpp
include/: person.h
modern-cpp/: CMakeLists.txt  structured.binding.cpp
modules/: a.cc
modules-3rd/ImageUndistort/: CMakeLists.txt  undistort2_1.cpp  undistort2_2.cpp
modules-3rd/docs/: record.md
modules-3rd/icp/test/: CMakeLists.txt
modules/icp/: readme.txt
protobuf/: build.sh  person.pb.cc  person.pb.h  person.proto  write_person  write_person.cpp
python/: drawPositioningTrack.py  draw_slam_status_map.py  posefusion.py  pytest.py
script/: build.sh  release.sh
src/: person.cpp
src/DarkBlue_Slam/basicTransformStudy/: main.cpp
src/SkidDetection/: tool.h
src/carto/: CMakeLists.txt  glog_test.cpp
src/cherno/: CMakeLists.txt  cherno.h  cherno_main.cpp  singleton.hpp
src/coredump/: main.out
src/design_patterns/: CMakeLists.txt  Singleton.h  main_designPatterns.cpp
src/dianyunxia/: 3d_reconstruction_tri.cpp  CMakeLists.txt  hull_extraction.cpp  kd_oc_tree.cpp  main.cpp  mesh_volmue.cpp  passthrough.cpp  random_sample_consensus.cpp  region_growing_segmentation.cpp
src/fengbingchun/: CMakeLists.txt  csv_test.cpp  fbc_main.cpp  funset.hpp  test_Json11.cpp  test_csv.cpp  test_parse_cvs.cpp  test_threadpool.cpp
src/gtest/: CMakeLists.txt  fixed_ratio_sampler.cc  fixed_ratio_sampler_test.cc
src/optimization_learn/: CMakeLists.txt  ceres_demo.cpp  ceres_demo1.cpp  convex_optimization.cpp  curve_fitting_demo.cpp  gauss-newton.cpp  nweton.py
src/protobuf/: read_person  read_person.cpp
src/std/algorithm/: radius_filter.cpp
src/std/fliter_scan/: CMakeLists.txt  cluster.cpp
src/std/gtest/: CMakeLists.txt  base_point_cloud_process.h  base_point_cloud_process_test.cpp  filter_box_test.cpp
src/std/sequent_structure/: CMakeLists.txt  func_timer.cpp  no_para_structure.cpp  para_structure.cpp  polymorphic.cpp  summary.md  thread_ptr.cpp
src/test_cmake_module/: CMakeLists.txt  main.cpp
src/test_cmake_module/pose/: CMakeLists.txt  pose.cpp  pose.h
src/tofLocation/: tofLocation.cc
tofLocation/: tofLocation.cc  tofLocation.h
utils/: CMakeLists.txt  ElapsedTimer.h  csv.hpp  key_monitor.cc  key_monitor.h  manual_ctrl.cpp  manual_ctrl.h  parse_csv.hpp  port.h  sleep_timer.cpp  sleep_timer.h  time.cc  time.h  time_witness.cc  time_witness.h  timer.cc  timer.h  tool.h
